<resources>
    <string name="app_name">Tourist Guide</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_description">Tourist Guide App for Sultan Kudarat</string>

    <!--FACEBOOK-->
    <string name="facebook_app_id">333028157041452</string>
    <string name="shareOnFacebook">Share on Facebook</string>

    <!--MENU-->
    <string name="map">Map</string>
    <string name="visited_places">Visited Places</string>
    <string name="events">Events</string>
    <string name="mark">Mark</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="logs">Logs</string>
    <string name="title_activity_maps">Map</string>
    <string name="navigate">Navigate</string>
    <string name="bookmark">Bookmarked Places</string>

    <!--HISTORY-->
    <string name="history">Sultan Kudarat was part of the former empire province of Cotabato, until its creation as an independent province (along with Maguindanao and North Cotabato) on November 22, 1973, through Presidential Decree No. 341 signed by President Ferdinand E. Marcos. \n\n\nThe name Sultan Kudarat given to the province was derived from the Muslim ruler, Sultan Muhammad Dipatuan Kudarat who begun to assert his leadership in the year 1619 and reigned in the Sultanate of Maguindanao from 1625 to 1671. He is considered a national hero, and in his honor the province was named after him.</string>
    <string-array name="events">
        <item>Bansadayaw (Bagumbayan)</item>
        <item>Kastifun (Columbio)</item>
        <item>Hinabyog (Esperanza)</item>
        <item>Pasundayag (Isulan)</item>
        <item>Salagaan (Kalamansig)</item>
        <item>Timpuyog (Lambayong)</item>
        <item>Hinugyaw (Lebak)</item>
        <item>Kanduli (Lutayan)</item>
        <item>Kaiilang (Palimbang)</item>
        <item>Sambuyawan (Pres. Quirino)</item>
        <item>Sulok (Sen. Ninoy Aquino)</item>
        <item>Talakudong (Tacurong City)</item>
        <item>Inugyunay (Tacurong City)</item>
    </string-array>

    <string-array name="events_description">
        <item>Description for Bansadayaw</item>
        <item>Description for Kastifun</item>
        <item>Description for Hinabyog</item>
        <item>Description for Pasundayag</item>
        <item>Description for Salagaan</item>
        <item>Description for Timpuyog</item>
        <item>Description for Hinugyaw</item>
        <item>Description for Kanduli</item>
        <item>Description for Kaiilang</item>
        <item>Description for Sambuyawan</item>
        <item>Description for Sulok</item>
        <item>Description for Talakudong</item>
        <item>Description for Inugyunay</item>
    </string-array>

    <integer-array name="events_preview">
        <item>@drawable/bansadayaw</item>
        <item>@drawable/kastifun</item>
        <item>@drawable/hinabyog</item>
        <item>@drawable/pasundayag</item>
        <item>@drawable/salagaan</item>
        <item>@drawable/timpuyog</item>
        <item>@drawable/hinugyaw</item>
        <item>@drawable/kanduli</item>
        <item>@drawable/kalilang</item>
        <item>@drawable/sambuyawan</item>
        <item>@drawable/sulok</item>
        <item>@drawable/talakudong</item>
        <item>@drawable/inugyanay</item>
    </integer-array>

    <string-array name="dates">
        <item>September 10</item>
        <item>August 6</item>
        <item>November 22</item>
        <item>September 12</item>
        <item>December 29</item>
        <item>October 29</item>
        <item>August 18</item>
        <item>October 12</item>
        <item>May 14</item>
        <item>November 22</item>
        <item>February 17</item>
        <item>September 18</item>
        <item>December 23</item>
    </string-array>

    <string-array name="places">
        <item>Tacurong:</item>
        <item>Esperanza:</item>
    </string-array>

    <string-array name="latlong">
        <item>Lat: 6.687757, Long: 124.678383</item>
        <item>Lat: 6.707771, Long: 124.543727</item>
    </string-array>

    <string name="columbio">
        Columbio is located in the eastern most part of the province. It is bounded in the north by the municipality of Tulunan, Cotabato; in the east by the municipalities of Tupi and Tampakan, South Cotabato; and in the west by the municipalities of Koronadal, South Cotabato, Lutayan, Sultan Kudarat and Datu Paglas, Maguindanao.
    </string>

    <string name="isulan">
        Kenram Palm Oil Plantation is next to Kapinkong and is located in Province of Sultan Kudarat, Soccsksargen, Philippines.
    </string>

    <string name="lambayong">
        Delinanas Development Corp., a subsidiary of Del Monte Fresh Produce Philippines, Inc., is applying for government incentives for its banana plantation in Mindanao, according to a Board of Investments (BoI) notice published in newspapers recently. Delinanas is registering with the BoI on non-pioneer status its banana plantation in Lambayong town, Sultan Kudarat that can produce 2,759,833 boxes or 37.257 metric tonnes of Cavendish bananas every year.
    </string>

    <string name="lutayan">
        is the 11th ruler of Buayan. He is the son of Sabaraba-Dalumabi sa Buayan and Bai Poyo (grand daughter of K’bo and Putri Melagandi). Kaban or Malang-sa-Inged II is the brother of Mening (Datu sa Buayan).
    </string>

    <string name="presquirino">
        this is the finest "muscovado", is a type of partially refined to unrefined brown sugar with a strong molasses content and flavour.
    </string>

    <string name="tacurong">
        Baras Bird Sanctuary is a haven for 20,000+ endemic &amp; migratory birds, as well as a learning center for kids and kids at heart. Located by the Banga River in Tacurong City, Sultan Kudarat, this sanctuary isn\'t your usual avian park where the birds are enclosed in a cage.
    </string>

    <string name="senator_ninoy_aquino">
        Is one of the famous caves in the municipality of Sen. Ninoy Aquino, Sultan Kudarat. It is frequented by local and international cave enthusiasts due to its majestic stalactites, stalagmites, helictites, and unique rock formations. Ancient burial jars made from limestone had been discovered in Lagbasan Cave.
    </string>

    <string name="bagumbayan">

    </string>

    <string name="esperanza">
        The Margues Hot and Cold Spring is about 8 kilometers from the poblacion. Corn fields, palm trees and a mini rice terraces are some of the views that can be seen going to the area. Locals are very helpful to assist if you inquire where the hot spring is. When asked about the location, they usually response with “ sa ta-as pa na” which they mean above the mountain.
    </string>

    <string name="palimbang">
        Tuna Bay is a bay and is located in Province of Sultan Kudarat, Soccsksargen, Philippines. The estimate terrain elevation above sea level is -9999 metres. Variant forms of spelling for Tuna Bay or in other languages: Tunu Bay, Tuna Bay, Tuna Bay, Tunu Bay.
        Latitude: 6°22\'57\"
        Longitude: 124°4\'23.01\"
        The superior administrative division is Soccsksargen.
    </string>

    <string name="lebak">
        Located at the coastal municipality of Lebak, Sultan Kudarat, this mangroves forests provides a safe haven and a nursery for variety of fish, birds and shellfish. Barangay Taguisa in cooperation with DENR have adopted mangrove restoration and conservation programs to protect the area. Mangrove forests plays a vital role in trapping sediments, thereby stabilizing coastlines and protecting coral reefs. With their roots in the water and leaves in the air, mangrove ecosystem supports a diversity of life.
    </string>


</resources>
