<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/icon_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_visited_places"
            android:icon="@drawable/icon_visited"
            android:title="@string/visited_places" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/icon_events"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_mark"
            android:icon="@drawable/icon_mark"
            android:title="@string/mark" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/icon_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_logs"
                android:icon="@drawable/icon_logs"
                android:title="@string/logs" />
        </menu>
    </item>

</menu>
